@@ -4,6 +4,11 @@ All changes of DMT starting from version 1.3.0 will be documented in this file. 
 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased] - 
+
+### Fixed
+
+- CI Release name
 
 ## [1.6.1] - 2022.06.14
 
